# tauri-budapest

./: package.json  pnpm-lock.yaml
.github/workflows/: release.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/routes/: +page.svelte  updater.ts
