[package]
name = "tauri-budapest"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauri_budapest_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.0.0-beta.9"
tauri-plugin-os = "2.0.0-beta.6"
tauri-plugin-notification = "2.0.0-beta.8"

[profile.release]
panic = "abort" # skip cleanup logic in production when panicking
lto = true      # enable link-time optimization
strip = true    # strip symbols from the binary


# may need to change these settings based on your project
opt-level = "s"   # optimize for binary size
codegen-units = 1 # increase build time but decrease binary size
